lib/stratiform/res/test/stratiform/corpus/pos/remark-on-compound.tel
hello world # this is a remark
