lib/stratiform/res/test/stratiform/corpus/neg/e123-pragma-with-remark.tel
tel 1.0 # this is a remark
hello
